Allowed the user to click on ADAM in order to change the text box.

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,13 @@
 
 .App-logo {
   height: 50vh;
+}
+
+.App-header {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  position: relative;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
 }
