Added an animation to ADAM.

--- a/src/TextBox.css
+++ b/src/TextBox.css
@@ -2,3 +2,20 @@
     background-color: white;
     border-radius: 5px;
 }
+
+@media (prefers-reduced-motion: no-preference) {
+  .ADAM {
+    &.spin{
+        animation: ADAM-spin infinite 20s linear;
+    }
+  }
+}
+
+@keyframes ADAM-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
