--- a/src/TextBox.css
+++ b/src/TextBox.css
@@ -8,6 +8,9 @@
     &.spin{
         animation: ADAM-spin infinite 20s linear;
     }
+    &.resize{
+      animation: ADAM-resize infinite 8s linear;
+    }
   }
 }
 
@@ -18,4 +21,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+@keyframes ADAM-resize {
+  0% {scale: 100%;}
+  25%  {scale: 150%;}
+  50%  {scale: 100%;}
+  75%  {scale: 50%;}
+  100% {scale: 100%;}
 }
