--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -2,11 +2,15 @@
   text-align: center;
 }
 
-.Home-header {
+.header {
   min-height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+}
+
+.Arrow {
+  vertical-align: middle;
 }
